feat: error and success msg

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/main.js"></script>
     <title>Cadastro de Usuário</title>
 </head>
 
 <body>
     <h1 id="title-page">Acontecendo agora</h1>
 
-    <div id="main-div">
+    <div id="main-div" class="">
 
         <div id="user-form">
             <h2>Inscreva-se hoje</h2>
